# world

./: .bazelrc  .devcontainer.json  .gitignore  .profile  BUILD.bazel  README.md  WORKSPACE  devcontainer.json  go.mod  go.sum  package.json  renovate.js  renovate.json  requirements.in  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: docker.sh
.github/workflows/: lint.yml  push.yml  scan.yml  test.yml  update.yml
cmd/bazel/: BUILD.bazel  bazel.sh  build.sh
cmd/bot/: index.ts
cmd/buildifier/: BUILD.bazel
cmd/buildozer/: BUILD.bazel
cmd/crane/: BUILD.bazel
cmd/gazelle/: BUILD.bazel
cmd/gh/: BUILD.bazel  app.go  main.go
cmd/hugo/: BUILD.bazel
cmd/netlify/: build.sh
cmd/shfmt/: BUILD.bazel
cmd/slack_collect_export/: slack_collect_export.py
cmd/tail/: BUILD.bazel  main.go
cmd/tools/: main.go
doc/: BUILD.bazel  doc.bzl
ext/: BUILD.bazel  deps.bzl  ext.bzl  github_archives.bzl  github_files.bzl  go.bzl  url.bzl  url_archives.bzl  url_files.bzl
home/: .bashrc  .gitconfig  BUILD.bazel
image/devcontainer/: BUILD.bazel  test.json
img/: img.bzl
img/home/: BUILD.bazel  Dockerfile  build.sh
img/vscode/: BUILD.bazel  Dockerfile  build.sh  run.sh
lang/node/: BUILD.bazel
lang/rust/: BUILD.bazel  test.json
nogo/: config.json
site/: BUILD.bazel  build.sh  extract.sh  test.sh
site/content/note/: foo.md
site/public/: index.xml  sitemap.xml
site/public/note/: index.xml
site/themes/site/: theme.toml
tools/: bazel
versions/: versions.bzl
