load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

sh_binary(
    name = "extract",
    srcs = ["extract.sh"],
    data = [":site.tar"],
)

genrule(
    name = "tar",
    outs = ["site.tar"],
    cmd = "$(location :build) $@",
    tools = [":build"],
)

sh_binary(
    name = "build",
    srcs = ["build.sh"],
    data = ["//cmd/hugo:hugo.bin"] + glob(["**/*"]),
)

sh_test(
    name = "test",
    srcs = ["test.sh"],
    data = [":extract"],
)
