sh_binary(
    name = "extract",
    srcs = ["extract.sh"],
    data = [":site.tar"],
)

genrule(
    name = "site",
    outs = ["site.tar"],
    cmd = "$(location :build) $(location //cmd/hugo) $@",
    tools = [":build", "//cmd/hugo"],
)

sh_binary(
    name = "build",
    srcs = ["build.sh"],
    data = ["//cmd/hugo"] + glob(["**/*"]),
)

sh_test(
    name = "test",
    srcs = ["test.sh"],
    data = [":extract"],
)
