load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

sh_binary(
    name = "extract",
    srcs = ["extract.sh"],
    args = ["$(location :site.tar)"],
    data = [":site.tar"],
)

genrule(
    name = "site",
    outs = ["site.tar"],
    srcs = [":input.tar"],
    cmd = "$(location :build) $(location :input.tar) $(location //cmd/hugo) $@",
    tools = [
        ":build",
        "//cmd/hugo",
    ],
)

sh_binary(
    name = "build",
    srcs = ["build.sh"],
    data = ["//cmd/hugo"] + glob(["**/*"]),
)

pkg_tar(
    name = "input",
    srcs = glob(["**/*"]),
    strip_prefix = ".",
)

sh_test(
    name = "test",
    srcs = ["test.sh"],
    data = [":extract"],
)
