load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

sh_binary(
    name = "build",
    srcs = ["build.sh"],
    data = [":context.tar"],
)

sh_binary(
    name = "home",
    srcs = ["run.sh"],
)

pkg_tar(
    name = "context",
    srcs = [
        "Dockerfile",
    ],
    deps = [
        ":slash_usr_local",
        ":slash_usr_local_bin",
        ":slash_root",
    ],
)

pkg_tar(
    name = "slash_root",
    package_dir = "/root",
    srcs = [
        ".gitconfig",
    ],
)

pkg_tar(
    name = "slash_usr_local",
    package_dir = "/usr/local",
    deps = [
        "@com_docker_download_docker//file:docker.tgz",
    ],
)

pkg_tar(
    name = "slash_usr_local_bin",
    mode = "0755",
    package_dir = "/usr/local/bin",
    files = {
        "//cmd/buildifier": "./buildifier",
        "//cmd/shfmt": "./shfmt",
        "//cmd/buildozer": "./buildozer",
        "//cmd/bazel": "./bazel",
        "//cmd/hugo": "./hugo",
        "//cmd/bazel:build.sh": "./build",
        "@bazel_gazelle//cmd/gazelle": "./gazelle",
    },
    symlinks = {
        "./usr/local/bin/docker": "../docker/docker",
        "./usr/local/bin/python": "/usr/bin/python3",
    },
)
