load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

sh_binary(
    name = "build",
    srcs = ["build.sh"],
    data = [":context.tar"],
)

sh_binary(
    name = "vscode",
    srcs = ["run.sh"],
)

pkg_tar(
    name = "context",
    srcs = [
        "Dockerfile",
    ],
    deps = [
        ":bin",
        "//home",
    ],
)

pkg_tar(
    name = "home",
    srcs = [
        ".gitconfig",
    ],
    symlinks = {
        "./project/.cache": "./.cache",
    },
)

pkg_tar(
    name = "usr_local",
    package_dir = "/usr/local",
    deps = [
        "@com_docker_download_docker//file:docker.tgz",
    ],
)

pkg_tar(
    name = "usr_local_bin",
    mode = "0755",
    package_dir = "/usr/local/bin",
    files = {
        "//cmd/buildifier": "./bin/buildifier",
        "//cmd/shfmt": "./bin/shfmt",
        "//cmd/buildozer": "./bin/buildozer",
        "//cmd/bazel": "./bin/bazel",
        "//cmd/hugo": "./bin/hugo",
        "@bazel_gazelle//cmd/gazelle": "./bin/gazelle",
    },
    symlinks = {
        "./bin/docker": "../docker/docker",
        "./bin/python": "/usr/bin/python3",
    },
)
